added env for mega, got everything working well

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,19 @@
 platform = atmelavr
 board = uno
 framework = arduino
+
+debug_tool = avr-stub
+debug_port = COM3
+lib_deps = 
+	adafruit/Adafruit_VL53L0X@^1.2.2
+	adafruit/Adafruit LSM9DS0 Library@^2.0.4
+	jdolinay/avr-debugger@^1.5
+
+[env:megaatmega2560]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino 
+
 debug_tool = avr-stub
 debug_port = COM3
 lib_deps = 
